--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,8 @@ input {
   width: 100%;
   padding-left: 10px;
   padding-right: 10px;
+  border: 2px solid #5f9341;
+  border-radius: 2px;
 }
 
 button {
